core/objectstorage/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-big-upload
  namespace: default
spec:
  buffering:
    maxRequestBodyBytes: 0
    memRequestBodyBytes: 0
