core/objectstorage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`minio.mtaku3.com`)
    kind: Rule
    services:
      - name: minio
        port: tcp-api
  tls:
    secretName: minio-tls
